# llp-labs

./: README.md
lab1/: CMakeLists.txt  Makefile  README.html  README.md  README_tmp.html  build.bat  build.sh  graphs.py  ram_graph.sh  x86_64-mingw.cmake
lab1/src/: main.cpp
lab1/src/api/: api.cpp  api.h  api_file.cpp  api_node.cpp  api_schema.cpp  api_search.cpp
lab1/src/file/: file.cpp  file.h
lab1/src/structs/: block.cpp  block.h  header.cpp  header.h  node.cpp  node.h  schema.cpp  schema.h
lab1/src/structs/schema/: schema.h
lab1/src/test/stress_test/: stress_test.cpp  stress_test.h
lab1/src/test/unit_test/: unit_test.cpp  unit_test.h
